navbar created and completed not responsive

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <link rel="icon" type="image/svg+xml" href="/assets/images/icon.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Vite + React</title>
+    <title>Humble Bundle | game bundles, book bundles, software bundles and more</title>
 </head>
 <body>
 <div id="root"></div>
